# DISO-mappings

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
configs/: aml.yaml  bertmap.yaml  bertmap_lt.yaml  logmap.yaml  logmap_llm.yaml  logmap_lt.yaml  pairs.example.yaml  pairs.paper.yaml
scripts/: consensus.py  download_diso.py  extract_compact_diso.py  imports_and_parseable.py  preprocess_labels_om.py  remove_dead_imports.py  run_matcher.py
src/diso-mappings/: constants.py  paths.py
src/diso_mappings/: _rdflib_common.py  constants.py  pairs.py  paths.py  preprocessing.py  registry.py
src/diso_mappings/consensus/: __init__.py  consensus.py  discovery.py  labels.py  stats.py  unique.py  voting.py  writers.py
src/diso_mappings/io/: alignment.py  terminal.py
src/diso_mappings/matchers/: __init__.py  _deeponto_common.py  _subprocess_runner.py  aml.py  base.py  bertmap.py  bertmap_lt.py  logmap.py  logmap_llm.py  logmap_lt.py
src/diso_mappings/matchers/_workers/: __init__.py  _bertmap_lt_worker.py  _bertmap_worker.py  _common_workers.py
