[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "diso-mappings"
version = "0.1.0"
description = "DISO mappings OM / alignment pipeline."
requires-python = ">=3.10"

dependencies = [
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
